graduation project done

--- a/index.html
+++ b/index.html
@@ -10,30 +10,32 @@
 
 <!DOCTYPE html>
 <html>
-  <head lnag="kr">
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
-  </head>
+    <head lnag="kr">
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="index.css" />
+        <title>Document</title>
+    </head>
 
-  <body>
-    <div class="js-clock">
-      <h1>00:00</h1>
-    </div>
-    <!-- 태그명과 클래스명을 동일하게 쓴다. 좋을듯 -->
-    <form class="js-form form">
-      <input type="text" placeholder="What is your name?" />
-    </form>
-    <h4 class="js-greetings greetings"></h4>
-    <form class="js-toDoForm">
-      <input type="text" placeholder="Write a to do" />
-    </form>
-    <ul class="js-toDoList"></ul>
-    <span class="js-weather"></span>
-    <script src="clock.js"></script>
-    <script src="greeting.js"></script>
-    <script src="todo.js"></script>
-    <script src="bg.js"></script>
-    <script src="weather.js"></script>
-  </body>
+    <body>
+        <div class="container">
+            <div class="js-clock">
+                <h1>00:00</h1>
+            </div>
+            <!-- 태그명과 클래스명을 동일하게 쓴다. 좋을듯 -->
+            <form class="js-form form">
+                <input type="text" placeholder="What is your name?" />
+            </form>
+            <h4 class="js-greetings greetings"></h4>
+            <ul class="js-toDoList"></ul>
+            <form class="js-toDoForm">
+                <input type="text" placeholder="Write a to do" />
+            </form>
+            <span class="js-weather"></span>
+        </div>
+        <script src="clock.js"></script>
+        <script src="greeting.js"></script>
+        <script src="todo.js"></script>
+        <script src="bg.js"></script>
+        <script src="weather.js"></script>
+    </body>
 </html>
