--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <head lnag="kr">
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="index.css" />
-        <title>Document</title>
+        <title>Welcome to Momoton</title>
     </head>
 
     <body>
